--- a/styles/global.css
+++ b/styles/global.css
@@ -1,38 +1,29 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-body {
-  width: 1100px;
-  margin: 0 auto;
-  font-family: Raleway, sans-serif;
-}
-
+body,
 h1,
 h2,
 h3,
 h4,
 h5,
-h6,
-p,
-ul,
-ol,
-li,
-blockquote {
-  margin: 0;
+p {
+  margin: 0;  
+}
+
+ul, li {
+  list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
 a {
-  color: inherit;
+  text-decoration: none;
 }
 
-img {
-  width: 100%;
+.container {
+  width: 1100px;
+  margin: 0 auto;
 }
 
-button {
-  font: inherit;
-}
+.overlay {
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+};
