--- a/styles/header.css
+++ b/styles/header.css
@@ -1,3 +1,7 @@
+.header {
+  overflow-x: hidden;
+}
+
 
 .header__menu {
   font-family: 'Raleway', sans-serif;
@@ -9,8 +13,7 @@
   padding-top: 92px;
   padding-bottom: 96px;
   padding-right: 50px;
-  padding-left: 50px; 
-}
+  padding-left: 50px;}
 
 
 .header__list_menu {
