--- a/styles/about.css
+++ b/styles/about.css
@@ -2,6 +2,7 @@
   max-width: 1052px;
   margin: 0 auto;
   padding: 120px 24px;
+  overflow-x: hidden;
 
 }
 
@@ -27,9 +28,7 @@
 .about__title {
   font-family: 'Raleway', sans-serif;
   font-weight: bold;
-  font-weight: 700;
   font-size: 40px;
-  font-weight: bold;
   margin-bottom: 100px;
   text-transform: uppercase;
   color: #000;
