--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,6 +1,6 @@
 .footer {
   margin: 0 auto;
-  max-width: 1100px;
+  overflow-x: hidden;
 }
 
 .footer_flex {
@@ -20,10 +20,6 @@ justify-content: space-between;
   color: #000;
 }
 
-.footer__adress__link {
-  color: #000;
-}
-
 .footer__menu-list {
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
@@ -38,10 +34,6 @@ justify-content: space-between;
 .footer__menu-link_active {
   text-decoration: none;
   color: #000;
-}
-
-.footer__menu-link_active {
-color: #000;
 }
 
 .footer__menu-list-item {
