--- a/styles/header.css
+++ b/styles/header.css
@@ -13,7 +13,8 @@
   padding-top: 92px;
   padding-bottom: 96px;
   padding-right: 50px;
-  padding-left: 50px;}
+  padding-left: 50px;
+}
 
 
 .header__list_menu {
