--- a/styles/header.css
+++ b/styles/header.css
@@ -8,21 +8,23 @@
   font-size: 18px;
   display: flex;
   /* grid-template-columns: 1fr min-content 1fr; */
-  justify-content: space-between;
   align-items: center;
   padding-top: 92px;
   padding-bottom: 96px;
-  padding-right: 50px;
-  padding-left: 50px;
+
 }
 
 
 .header__list_menu {
   display: flex;
-  gap: 13px;
+  justify-content: space-between;
   text-decoration: none;
   width: 391px;
-  height: 22px;
+  margin-left: 50px;
+}
+
+.dot {
+  list-style-type: circle;
 }
 
 .header__link_active {
@@ -43,14 +45,21 @@
   color: black;
 }
 
+.header__logo {
+  height: 105px;
+  width: 148px;
+  margin-left: 37px;
+  margin-right: 184px; 
+}
+
 .header__logo a img {
   height: 105px;
   width: 148px;
 }
 
 .header__adress {
+  margin-right: 50px;
   width: 240px;
-  /* margin-left: 184px; */
 }
 
 .header__adress__link {
